<resources>
    <string name="app_name">Change currency</string>
    <string name="secondCurrencyText">0</string>
    <string name="firstUnitText">$</string>
    <string name="secondUnitText">đ</string>
    <string name="exchangeRateText">Exchange Rate</string>
    <string name="firstCurrencyText">0</string>
    <string name="logoName">Currency</string>
    <string name="ceText">CE</string>
    <string name="bsText">BS</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="_8">8</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="pointText">.</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="backspace_image">backspace image</string>
</resources>