<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDDDDDD"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/firstCurrencyText"
        android:layout_width="360dp"
        android:layout_height="120dp"
        android:background="#FFDDDDDD"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center|start"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:text="@string/firstCurrencyText"
        android:textColor="@android:color/black"
        android:textSize="75sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/firstUnitCurrency"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/secondCurrencyText"
        android:layout_width="360dp"
        android:layout_height="120dp"
        android:background="#FFDDDDDD"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center|start"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:text="@string/secondCurrencyText"
        android:textColor="@android:color/black"
        android:textSize="75sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/secondUnitCurrency"
        app:layout_constraintTop_toBottomOf="@id/firstCurrencySpinner"
        tools:ignore="TextSizeCheck" />

    <Spinner
        android:id="@+id/firstCurrencySpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="120dp"
        android:background="#FFDDDDDD"
        android:contentDescription="first currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstCurrencyText" />

    <Spinner
        android:id="@+id/secondCurrencySpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="120dp"
        android:background="#FFDDDDDD"
        android:contentDescription="second currency"
        app:layout_constraintBottom_toTopOf="@+id/exchangeRateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondCurrencyText" />

    <TextView
        android:id="@+id/firstUnitCurrency"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="#FFDDDDDD"
        android:fontFamily="sans-serif"
        android:gravity="start|center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="30dp"
        android:paddingEnd="0dp"
        android:text="@string/firstUnitText"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@id/firstCurrencyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondUnitCurrency"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="#FFDDDDDD"
        android:gravity="start|center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="30dp"
        android:paddingEnd="0dp"
        android:text="@string/secondUnitText"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@id/secondCurrencyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstCurrencySpinner" />

    <TextView
        android:id="@+id/exchangeRateText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#FFDDDDDD"
        android:gravity="center|start"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/exchangeRateText"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondCurrencySpinner" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exchangeRateText"
        app:layout_constraintVertical_chainStyle="spread">


        <View
            android:id="@+id/none"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/num7_btn"
            app:layout_constraintEnd_toStartOf="@+id/CE_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />

        <View
            android:id="@+id/none1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/num0_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/num1_btn"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/CE_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/ceText"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/num8_btn"
            app:layout_constraintEnd_toStartOf="@id/BS_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/none"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:strokeColor="#000000"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/BS_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_btn"
            android:contentDescription="@string/backspace_image"
            android:scaleType="fitCenter"
            android:src="@drawable/backspace_image"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/num9_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/CE_btn"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />


        <Button
            android:id="@+id/num7_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/_7"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/num4_btn"
            app:layout_constraintEnd_toStartOf="@+id/num8_btn"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/none"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/num4_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/_4"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/num1_btn"
            app:layout_constraintEnd_toStartOf="@+id/num5_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/num7_btn"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/num1_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/_1"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/none1"
            app:layout_constraintEnd_toStartOf="@+id/num2_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/num4_btn"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/num8_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/_8"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/num5_btn"
            app:layout_constraintEnd_toStartOf="@+id/num9_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/num7_btn"
            app:layout_constraintTop_toBottomOf="@id/CE_btn"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/num5_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/_5"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/num2_btn"
            app:layout_constraintEnd_toStartOf="@+id/num6_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/num4_btn"
            app:layout_constraintTop_toBottomOf="@id/num8_btn"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/num2_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/_2"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/num0_btn"
            app:layout_constraintEnd_toStartOf="@+id/num3_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/num1_btn"
            app:layout_constraintTop_toBottomOf="@id/num5_btn"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/num0_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/point_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/none1"
            app:layout_constraintTop_toBottomOf="@id/num2_btn"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/num9_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/_9"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/num6_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/num8_btn"
            app:layout_constraintTop_toBottomOf="@id/BS_btn"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/num6_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/_6"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/num3_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/num5_btn"
            app:layout_constraintTop_toBottomOf="@id/num9_btn"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/num3_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/_3"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/point_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/num2_btn"
            app:layout_constraintTop_toBottomOf="@id/num6_btn"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/point_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#EFEEEE"
            android:fontFamily="sans-serif"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:text="@string/pointText"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/num0_btn"
            app:layout_constraintTop_toBottomOf="@id/num3_btn"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>